add extra data to privacy file

--- a/FirstApp/Pages/Privacy.cshtml
+++ b/FirstApp/Pages/Privacy.cshtml
@@ -6,3 +6,5 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+<p>Need to add more details to privacy for the organization.</p>
+<p>Extra data added</p>
