--- a/FirstApp/Pages/Privacy.cshtml
+++ b/FirstApp/Pages/Privacy.cshtml
@@ -8,3 +8,4 @@
 <p>Use this page to detail your site's privacy policy.</p>
 <p>Need to add more details to privacy for the organization.</p>
 <p>Extra data added</p>
+<p>Another extra data added</p>
